package com.example.musicapp.data.storage.models

@JvmInline
value class SearchRequest(val searchText: String)
